--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <img id="logo" src="blank" alt="Joseph Damato Web Dev Logo"/>
     <br>
     <h3>Aspiring Web Dev</h3>
-    <button id="about" onclick="THISD WILL BE THE ABOUT PAGE LINK">About</button>
-    <button id="portfolio" onlick="THIS WILL BE THE PORTFOLIO LINK">Portfolio</button>
-    <button id="blog" onlick="THIS WILL BE LINK TO BLOG">Blog</button>
-    <button id="contact" onlick="THIS WILL BE CONTACT LINK">Contact</button>
+    <section>
+        <button id="about" onclick="about.html">About</button>
+        <button id="portfolio" onlick="portfolio.html">Portfolio</button>
+        <button id="blog" onlick="blog.html">Blog</button>
+        <button id="contact" onlick="contact.html">Contact</button>
+    </section>
 </body>
     <footer id="footer">
         <p>Joseph DAmato || Aspiring Web Dev © 2022</p>    
