--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     console.log('Hi! Welcome to my page! Watch for updates here and let me know if you find any easter eggs!')
 </script>
 <body id="Top">
+    <br></br>
+    <br></br>
+    <br></br>
     <h1>Joseph D'Amato</h1>
-    <img id="logo" src="blank" alt="Joseph Damato Web Dev Logo"/>
+    <img id="logo" src="images/faceLogo.png" border: "solid 1px #ccc" height="300px" width="auto" alt="Joseph Damato Web Dev Logo"/>
     <br>
     <h3>Aspiring Web Dev</h3>
     <section>
