FIxed footer typo

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ src="https://www.youtube.com/embed/tgbNymZ7vqY">
       <a href="#">Back to top</a>
     </p>
     <p class="mb-1">Joseph D'Amato's Portfolio Page © 2022</p>
-    <p class="mb-0">Visit my Repo at <a href="https://github.com/JosephDAmato">GitHub</a> or connect with me at LinkdIn<a href="https://www.linkedin.com/in/joseph-d-amato-ab45b240/">LinkdIn</a>.</p>
+    <p class="mb-0">Visit my Repo at <a href="https://github.com/JosephDAmato">GitHub</a> or connect with me at <a href="https://www.linkedin.com/in/joseph-d-amato-ab45b240/">LinkdIn</a>.</p>
   </div>
 </footer>
 
