--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           </ul>  
           <h4 class="text-white">Contact</h4>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Link up on LinkedIN</a></li>
-            <li><a href="#" class="text-white">Explore my GitHub</a></li>
-            <li><a href="#" class="text-white">Email me</a></li>
+            <li><a href="https://www.linkedin.com/in/joseph-d-amato-ab45b240" class="text-white">Link up on LinkedIN</a></li>
+            <li><a href="https://github.com/JosephDAmato/" class="text-white">Explore my GitHub</a></li>
+            <li><a href="Joseph.Matthew.Damato@gmail.com" class="text-white">Email me</a></li>
           </ul>
         </div>
       </div>
