update video url and homepage href to main

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Menu</h4>
           <ul class="list-unstyled">
-            <li><a href="https://josephdamato.github.io/" class="text-white">Home Page</a></li>
+            <li><a href="#" class="text-white">Home Page</a></li>
             <li><a href="https://josephdamato.github.io/ProjectPage" class="text-white">Project Page</a></li>
           </ul>  
           <h4 class="text-white">Contact</h4>
@@ -66,7 +66,7 @@
             <p class="lead text-muted"></p>
             <aside>
                 <iframe width="420" height="315"
-src="https://youtube.com/shorts/UQh2b21oE_U?feature=share">
+src="https://www.youtube.com/shorts/UQh2b21oE_U">
                 </iframe>
             </aside>
           </div>
