--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p class="lead text-muted"></p>
             <aside>
                 <iframe width="420" height="315"
-src="https://www.youtube.com/shorts/UQh2b21oE_U">
+src="https://www.youtube.com/embed/UQh2b21oE_U">
                 </iframe>
             </aside>
           </div>
