--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ src="https://www.youtube.com/embed/UQh2b21oE_U">
         <h1 class="fw-light">Projects</h1>
         <p class="lead text-muted">Below are the current projects I am working on during my MITxPro Emeritus Full Stack Development Cert.</p>
         <p>
-          <a href="#" class="btn btn-primary my-2">Go to My GitHub</a>
-          <a href="#" class="btn btn-secondary my-2">Connect with me on LinkedIn</a>
+          <a href="https://josephdamato.github.io/ProjectPage" target="_blank" rel="noreferrer noopener" class="btn btn-primary my-2">Go to My GitHub</a>
+          <a href="https://www.linkedin.com/in/joseph-d-amato-ab45b240" target="_blank" rel="noreferrer noopener" class="btn btn-secondary my-2">Connect with me on LinkedIn</a>
         </p>
       </div>
     </div>
