Link updates and video typo update

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p class="lead text-muted"></p>
             <aside>
                 <iframe width="420" height="315"
-src="https://www.youtube.com/embed/UQh2b21oE_U">
+src="https://www.youtube.com/embed/f18eIIOgaTE">
                 </iframe>
             </aside>
           </div>
@@ -79,7 +79,7 @@ src="https://www.youtube.com/embed/UQh2b21oE_U">
         <h1 class="fw-light">Projects</h1>
         <p class="lead text-muted">Below are the current projects I am working on during my MITxPro Emeritus Full Stack Development Cert.</p>
         <p>
-          <a href="https://josephdamato.github.io/ProjectPage" target="_blank" rel="noreferrer noopener" class="btn btn-primary my-2">Go to My GitHub</a>
+          <a href="https://github.com/JosephDAmato/"" target="_blank" rel="noreferrer noopener" class="btn btn-primary my-2">Go to My GitHub</a>
           <a href="https://www.linkedin.com/in/joseph-d-amato-ab45b240" target="_blank" rel="noreferrer noopener" class="btn btn-secondary my-2">Connect with me on LinkedIn</a>
         </p>
       </div>
@@ -150,11 +150,11 @@ src="https://www.youtube.com/embed/UQh2b21oE_U">
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <!--Go To Web App-->
-                    <a href="https://github.com/JosephDAmato/BusAnimation" target="_blank" rel="noreferrer noopener">
+                    <a href="https://josephdamato.github.io/BusAnimation/" target="_blank" rel="noreferrer noopener">
                           <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                     </a>
                     <!--Go To Repo-->
-                    <a href="https://josephdamato.github.io/BusAnimation/" target="_blank" rel="noreferrer noopener">
+                    <a href="https://github.com/JosephDAmato/BusAnimation" target="_blank" rel="noreferrer noopener">
                           <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                     </a>
                   </div>
