--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white"><img src="images/faceLogo.png" width="55px" height="auto"/>Joseph D'Amato</h4>
-          <p class="text-muted">Hi! I'm Joseph D'Amato and welcome to my portfolio page. I am enrolled in MIT xPro Emeritus Full Stack Certiface program. My goal is to establish a career in software engineering and find solutions to problems through creation!</p>
+          <p class="text-muted">Hi! I'm Joseph D'Amato and welcome to my portfolio page. I am enrolled in MIT xPro Emeritus Full Stack Certiface program. My goal is to establish a career in software engineering and find solutions to problems through creation! Prior to studying web development, I held careers in the Hospitality Industry, Retail Grocery Industry and as a Realtor.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Menu</h4>
