--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <ul class="list-unstyled">
             <li><a href="https://www.linkedin.com/in/joseph-d-amato-ab45b240" target="_blank" rel="noreferrer noopener" class="text-white">Link up on LinkedIN</a></li>
             <li><a href="https://github.com/JosephDAmato/" target="_blank" rel="noreferrer noopener" class="text-white">Explore my GitHub</a></li>
-            <li><a href="Joseph.Matthew.Damato@gmail.com" class="text-white">Email me</a></li>
+            <li><a href="mailto:Joseph.Matthew.Damato@gmail.com" class="text-white">Email me</a></li>
           </ul>
         </div>
       </div>
